[gd_scene load_steps=15 format=3 uid="uid://hg67aoje345"]

[ext_resource type="Script" uid="uid://dhidgtnkirpt6" path="res://script/signup.gd" id="1_db6g7"]
[ext_resource type="VideoStream" uid="uid://c5qxaigtag7rk" path="res://asset/bg video.ogv" id="2_y1epg"]
[ext_resource type="Texture2D" uid="uid://blqoxvny7npuf" path="res://asset/icons/logo.png" id="3_ipb3t"]
[ext_resource type="Texture2D" uid="uid://b7u1847g1yjml" path="res://asset/icons/icons8-facebook-logo-48.png" id="4_db6g7"]
[ext_resource type="Texture2D" uid="uid://c50acgmi0vimf" path="res://asset/icons/icons8-google-48.png" id="5_uyhdp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_db6g7"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_umdsq"]
bg_color = Color(0.941176, 0.941176, 0.941176, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
expand_margin_left = 20.0
expand_margin_right = 20.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y1epg"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ipb3t"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_20qy8"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uyhdp"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eumta"]
bg_color = Color(0.917647, 0.0666667, 0.211765, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2qg56"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_07f7y"]

[node name="signup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_db6g7")

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
layout_mode = 2
offset_left = 3.0
offset_top = -1.0
offset_right = 1204.0
offset_bottom = 710.0
stream = ExtResource("2_y1epg")
autoplay = true
expand = true
loop = true

[node name="FillUpForm" type="PanelContainer" parent="VideoStreamPlayer"]
self_modulate = Color(0, 0, 0, 0.956863)
layout_mode = 0
offset_left = 96.0
offset_top = 84.0
offset_right = 723.0
offset_bottom = 589.0

[node name="EmailLabel" type="Label" parent="VideoStreamPlayer"]
layout_mode = 0
offset_left = 226.0
offset_top = 105.0
offset_right = 395.0
offset_bottom = 154.0
text = "EMAIL
"

[node name="PasswordLabel" type="Label" parent="VideoStreamPlayer"]
layout_mode = 0
offset_left = 230.0
offset_top = 187.0
offset_right = 397.0
offset_bottom = 220.0
text = "PASSWORD"

[node name="RepeatPasswordLabel" type="Label" parent="VideoStreamPlayer"]
layout_mode = 0
offset_left = 226.0
offset_top = 293.0
offset_right = 393.0
offset_bottom = 322.0
text = "REPEAT PASSWORD"

[node name="EmailLineEdit" type="LineEdit" parent="VideoStreamPlayer"]
layout_mode = 0
offset_left = 228.0
offset_top = 128.0
offset_right = 600.0
offset_bottom = 182.0
theme_override_colors/caret_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_selected_color = Color(0, 0, 0, 1)
theme_override_colors/font_uneditable_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 19
theme_override_styles/focus = SubResource("StyleBoxFlat_db6g7")
theme_override_styles/normal = SubResource("StyleBoxFlat_umdsq")
max_length = 50
caret_blink = true

[node name="PasswordLineEdit" type="LineEdit" parent="VideoStreamPlayer"]
layout_mode = 0
offset_left = 227.0
offset_top = 225.0
offset_right = 599.0
offset_bottom = 279.0
theme_override_colors/caret_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_selected_color = Color(0, 0, 0, 1)
theme_override_colors/font_uneditable_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 19
theme_override_styles/focus = SubResource("StyleBoxFlat_y1epg")
theme_override_styles/normal = SubResource("StyleBoxFlat_umdsq")
max_length = 50
caret_blink = true
secret = true

[node name="RepeatPasswordLineEdit" type="LineEdit" parent="VideoStreamPlayer"]
layout_mode = 0
offset_left = 232.0
offset_top = 316.0
offset_right = 604.0
offset_bottom = 370.0
theme_override_colors/caret_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_selected_color = Color(0, 0, 0, 1)
theme_override_colors/font_uneditable_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 19
theme_override_styles/focus = SubResource("StyleBoxFlat_ipb3t")
theme_override_styles/normal = SubResource("StyleBoxFlat_umdsq")
max_length = 50
caret_blink = true
secret = true

[node name="SignUpButton" type="Button" parent="VideoStreamPlayer"]
layout_mode = 0
offset_left = 294.0
offset_top = 407.0
offset_right = 526.0
offset_bottom = 451.0
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = SubResource("StyleBoxFlat_20qy8")
theme_override_styles/hover = SubResource("StyleBoxFlat_uyhdp")
theme_override_styles/normal = SubResource("StyleBoxFlat_eumta")
text = "SIGNUP
"
mouse_default_cursor_shape = 2

[node name="logo" type="PanelContainer" parent="VideoStreamPlayer"]
modulate = Color(0, 0, 0, 1)
self_modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 720.0
offset_top = 83.0
offset_right = 1092.0
offset_bottom = 589.0
theme_override_styles/panel = SubResource("StyleBoxFlat_2qg56")

[node name="status" type="Label" parent="VideoStreamPlayer"]
layout_mode = 0
offset_left = 114.0
offset_top = 558.0
offset_right = 505.0
offset_bottom = 581.0
text = "..."

[node name="Logo" type="Sprite2D" parent="VideoStreamPlayer"]
position = Vector2(894, 305)
texture = ExtResource("3_ipb3t")

[node name="FacebookLoginButton" type="TextureButton" parent="VideoStreamPlayer"]
layout_mode = 0
offset_left = 404.0
offset_top = 482.0
offset_right = 452.0
offset_bottom = 530.0
texture_normal = ExtResource("4_db6g7")
mouse_default_cursor_shape = 2

[node name="GoogleLoginButton" type="TextureButton" parent="VideoStreamPlayer"]
layout_mode = 2
offset_left = 350.0
offset_top = 481.0
offset_right = 398.0
offset_bottom = 529.0
texture_normal = ExtResource("5_uyhdp")
mouse_default_cursor_shape = 2

[node name="UsernameLabel2" type="Label" parent="VideoStreamPlayer"]
layout_mode = 0
offset_left = 276.0
offset_top = 541.0
offset_right = 477.0
offset_bottom = 590.0
text = "Already Have an Account?
"

[node name="ChangeToLoginButton" type="LinkButton" parent="VideoStreamPlayer"]
layout_mode = 0
offset_left = 481.0
offset_top = 540.0
offset_right = 538.0
offset_bottom = 580.0
theme_override_colors/font_color = Color(0.961518, 4.45209e-06, 9.62615e-07, 1)
theme_override_styles/focus = SubResource("StyleBoxFlat_07f7y")
text = "Login"
mouse_default_cursor_shape = 2

[connection signal="pressed" from="VideoStreamPlayer/SignUpButton" to="." method="_on_register_button_pressed"]
[connection signal="pressed" from="VideoStreamPlayer/ChangeToLoginButton" to="." method="_on_change_to_login_button_pressed"]
